@@ -1,3 +1,10 @@
+TAG: 
+DATE: 05/21/2002
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 3701; fantom2.py
+
 TAG: qcreports_db-17-0-8, qcreports_db-17-0-9
 DATE: 05/03/2002
 STAFF: lec
